--- a/index.html
+++ b/index.html
@@ -3064,7 +3064,7 @@ div.tocify {
 <!-- rnb-frame-end -->
 <!-- rnb-chunk-end -->
 <!-- rnb-text-begin -->
-<p>¡Pesadilla!. Cargó, pero la situción es mucho peor.</p>
+<p>¡Pesadilla!. Cargó, pero la situación es mucho peor.</p>
 <p>Intentemos con Python.</p>
 </div>
 <div id="tercer-intento-con-read_csv-de-la-libreria-pandas-de-python" class="section level4">
@@ -3223,7 +3223,7 @@ print(base_p.head(5))</code></pre>
 <!-- rnb-text-begin -->
 <p>La segunda es mediante un dataset (<code>base.csv</code>) asociado a un diccionario (<code>dic.csv</code>), donde las etiquetas del diccionario pueden asociarse con los atributos de los datos mediante R o Python.</p>
 <p>En los siguientes días sacaremos reportes de varias dimensiones de Internet y sociedad a partir de estos datos. Pero con los datos abiertos, tú también puedes hacerlo.</p>
-<p>El repositorio se encuentra [aquí].</p>
+<p>El repositorio se encuentra <a href="https://github.com/lab-tecnosocial/EncuestaTIC_BO/tree/master/csv">aquí</a>.</p>
 <!-- rnb-text-end -->
 </div>
 <div class="footnotes">
