--- a/index.html
+++ b/index.html
@@ -3207,7 +3207,7 @@ print(base_p.head(5))</code></pre>
 <!-- rnb-text-begin -->
 <p>La segunda es mediante un dataset (<code>base.csv</code>) asociado a un diccionario (<code>dic.csv</code>), donde las etiquetas del diccionario pueden asociarse con los atributos de los datos mediante R o Python.</p>
 <p>En los siguientes días sacaremos reportes de varias dimensiones de Internet y sociedad a partir de estos datos. Pero con los datos abiertos, tú también puedes hacerlo.</p>
-<p>El repositorio se encuentra <a href="https://github.com/lab-tecnosocial/EncuestaTIC_BO">aquí</a>.</p>
+<p>El repositorio se encuentra <a href="https://github.com/lab-tecnosocial/EncuestaTIC_BO" target="_blank">aquí</a>.</p>
 <!-- rnb-text-end -->
 </div>
 <div class="footnotes">
